syntax = "proto3";

import "proto/user_id.proto";

package user;

message GetUserRequest {
  UserId user_id = 1;
}

message GetUserResponse {
  DisplayUser display_user = 1;
}

message CreateUserRequest {
  // User sub ID is inferred from the (required) side-channel token.
  // UserID (buildbuddy) is generated.
  // Other values (like name, etc) will have initial values that are pulled
  // from the authentication provider response.
}

message CreateUserResponse {
   DisplayUser display_user = 1;
}